# mira-firmware

./: .gitignore  Cargo.toml  build.rs  memory.x
.cargo/: config.toml
src/: board.rs  config.rs  debounce.rs  keycodes.rs  layers.rs  main.rs  matrix.rs  usb.rs
src/keymaps/: default.rs
