[package]
name = "mira-firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
rp2040-hal = { version = "0.11", features = ["critical-section-impl", "rp2040-e5"] }
cortex-m-rt = "0.7.3"
cortex-m = "0.7"
panic-halt = "0.2"
rp2040-boot2 = "0.3"
usb-device = "0.3.2"
usbd-hid = "0.8"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
