[package]
name = "mira-firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
rp2040-hal = { version = "0.11", features = ["critical-section-impl", "rp2040-e5"] }
cortex-m-rt = "0.7.3"
cortex-m = "0.7"
embedded-hal = "1.0"
panic-halt = "0.2"
rp2040-boot2 = "0.3"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
usbd-hid = "0.8"
itoa = "1"

panic-probe = "0.3"

[profile.dev]
panic = "abort"
opt-level = 0
debug = 2
lto = "off"
codegen-units = 1

[profile.release]
panic = "abort"
